# brain-decoder-experiments

./: .gitignore  README.md  pyproject.toml  results.jsonl
configs/: default.yaml
data/: brain_multiclass.npz  brain_next_token.npz  brain_tokens.npz
runs/: out.json  out.jsonl  results.json
scripts/: analyze_results.py  brain_chat.py  build_dataset.py  checks.py  download_wiki40b.py  encode_corpus_tokens.py  run_experiment.py  show_generations.py  train_brain_decoder.py  train_tokenizer.py
src/lefty_brain_sim/: __init__.py  decision.py  encdec.py  experiment.py  gating.py  llm_iface.py  memory.py  stimuli.py  tvb_iface.py  utils.py
src/lefty_brain_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
